hphp/hack/test/typecheck/instanceof_generic_good_2.php.like_types.exp
File "instanceof_generic_good_2.php", line 14, characters 31-44:
Invalid return type (Typing[4336])
  File "instanceof_generic_good_2.php", line 16, characters 16-25:
  Expected `TvInternal`
  File "instanceof_generic_good_2.php", line 14, characters 31-44:
  But got `void` because this function does not always return a value
File "instanceof_generic_good_2.php", line 36, characters 38-40:
Invalid argument (Typing[4110])
  File "instanceof_generic_good_2.php", line 34, characters 27-54:
  Expected `TkInternal#2` from this `is` expression test
  File "instanceof_generic_good_2.php", line 15, characters 5-14:
    via this generic `TkInternal`
  File "instanceof_generic_good_2.php", line 31, characters 3-8:
  But got `string`
